[package]
name = "gear"
version = "0.1.1"
authors = ["Chris Fung <aergonaut@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.2"
duct = "0.12"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
clap-verbosity-flag = "0.2"
clap-log-flag = "0.2"
log = "0.4"
env_logger = "0.6"
regex = "1.2"
git2 = "0.10"
open = "1.3"
lazy_static = "1.3"
failure = "0.1.5"
